RESOLVED FIXED11647
Fix Win32 build
https://bugs.webkit.org/show_bug.cgi?id=11647
Summary Fix Win32 build
Sam Weinig
Reported 2006-11-18 20:04:31 PST
r17837 killed the win32 build. Patch forthcoming.
Attachments
patch (6.35 KB, patch)
2006-11-18 20:20 PST, Sam Weinig
mjs: review+
Sam Weinig
Comment 1 2006-11-18 20:20:13 PST
Maciej Stachowiak
Comment 2 2006-11-19 19:43:14 PST
Comment on attachment 11569 [details] patch r=me The comment in Vector.h could maybe be more clear that just using NOMINMAX doesn't appear to work for some reason.
Mark Rowe (bdash)
Comment 3 2006-11-20 05:10:09 PST
Landed in r17856.
Note You need to log in before you can comment on or make changes to this bug.