WebCore/config.h
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2004, 2005, 2006 Apple Computer, Inc.
+ * Copyright (C) 2006 Samuel Weinig <sam.weinig@gmail.com>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -47,6 +48,10 @@ typedef float CGFloat;
 #ifndef WINVER
 #define WINVER 0x0500
 #endif
+
+// We need to define this in order to use the numeric limit 
+// values provided by the C++ standard library.
+#define NOMINMAX
 
 // Hack to match configuration of JavaScriptCore.
 // Maybe there's a better way to do this.
